Fix most spacing issues
All but the navigation spacing is fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 html {
   box-sizing: border-box;
-  font-family: 'Georgia', cursive;
+  font-family: Georgia, cursive;
   color: #2f2d13;
-  border-width: 5px;
 }
 
 *, *::before, *::after {
@@ -15,11 +14,13 @@ header {
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 h1 {
-  font-family: "Sigmar One", cursive;
   margin: 0;
+  padding: 0;
+  font-family: "Sigmar One", cursive;
   text-align: center;
   color: #b20953;
   font-size: 3rem;
@@ -29,6 +30,8 @@ h2 {
   font-family: "Sigmar One", cursive;
   font-size: 1.875rem;
   color: #b20953;
+  margin: 0;
+  padding: .75em .3em 0;
 }
 
 img {
@@ -39,21 +42,30 @@ img {
 
 h2 + p {
   line-height: 1.5;
+  padding: 0 .75em;
+}
+
+img + p {
+  line-height: 1.5;
+  padding: 0 .75em;
 }
 
 .nav {
-  padding: 0;
   list-style-type: none;
+  margin: 0;
+  display: inline-block;
 }
 
 .nav li {
   display: inline-block;
+  padding: 0;
 }
 
 .nav a {
+  display: inline-block;
+  padding: .2em .5em .3em;
   color: white;
   background-color: #b2a212;
-  padding: .2em .5em .3em;
   text-decoration: none;
   font-size: 1.125rem;
   border-radius: 4px;
